# gwatch

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  churn-test-file.ps1  commit-and-push.ps1  generate.py  generate_lines.rs  install.ps1  kill-gwatch.ps1  purge-generate-lines-artifacts.ps1  test.md
.github/workflows/: ci.yml
scripts/: churn-test-file.ps1  install.ps1  kill-gwatch.ps1  purge-generate-lines-artifacts.ps1
src/: app.rs  cli.rs  diff.rs  diff_document.rs  git.rs  lib.rs  main.rs  runtime.rs  syntax.rs  ui.rs  watcher.rs
src/app/: mod.rs
src/diff/: document.rs  mod.rs
src/git/: mod.rs
src/runtime/: mod.rs
src/ui/: mod.rs
tests/scripts/: generate_lines.rs
