[package]
name = "gwatch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Read-only realtime terminal UI for monitoring Git working-tree changes"
readme = "README.md"
homepage = "https://github.com/connorcarro/gwatch"
repository = "https://github.com/connorcarro/gwatch"
license = "MIT"
keywords = ["git", "tui", "diff", "watch", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["generate.py", "kill-gwatch.ps1", "output.txt", "tests/scripts/"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
notify = "7"
ratatui = "0.29"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
